# Av1an

./: .gitmodules  Cargo.toml  README.md  bruh.ivf  rustfmt.toml
av1an/: logger.py
av1an-cli/: Cargo.toml  build.rs
av1an-cli/src/: main.rs
av1an-core/: Cargo.toml
av1an-core/src/: chunk.rs  concat.rs  encoder.rs  ffmpeg.rs  lib.rs  manager.rs  scenedetect.rs  split.rs  target_quality.rs  vapoursynth.rs
av1an-core/src/encoder/: aom.rs  generic.rs  mod.rs
av1an-pyo3/: Cargo.toml
av1an-pyo3/src/: lib.rs
av1an/encoder/: aom.py  svtav1.py
av1an/manager/: Manager.py  Pipes.py  Queue.py
av1an/project/: Project.py
av1an/startup/: setup.py
av1an/target_quality/: target_quality.py
av1an/vmaf/: vmaf.py
