[package]
name = "av1an-core"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
av-format = "0.3.1"
av-ivf = { git = "https://github.com/rust-av/ivf-rs", rev = "031aab76d1fc70a4b8518dc2ef5c3f4f1d839721" }
anyhow = "1.0.40"
num_cpus = "1.13.0"
vapoursynth = { version = "0.3.0", features = ["vsscript-functions", "vapoursynth-functions"] }
num-rational = "0.4.0"
regex = "1.5.4"
thiserror = "1.0.24"
y4m = "0.7.0"
psutil = "3.2.1"
strum = "0.21.0"
strum_macros = "0.21.1"
slog = "2.7.0"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"

[dependencies.av-scenechange]
version = "0.5.0"
default-features = false
